# FastAPI-OpenAPI-Parser

./: Makefile  main.py  pyproject.toml
fastapi_openapi_parser/: OpenApiParser.py
openapi-parser/: __init__.py
openapi_parser/: APITags.py  OpenApiParser.py
tests/: open_api_parser_test.py
tests/data/: data.py
tests/fixtures/: openapi_json_rinex_to_csv_fixture.py  parser_rinex_to_csv_fixture.py
tests/services/: rinex_to_csv.py  rinex_to_csv_with_tags.py
tests/services/domain/entity/: ConversionParams.py
