[tool.poetry]
name = "openapi_parser"
version = "0.1.0"
description = ""
authors = ["Kalinka George <xitowzys@gmail.com>"]
license = "Apache-2.0"
keywords = ["python", "fastapi", "gateway", "api", "microservice", "microservices"]
homepage = "https://github.com/xitowzys-ISZF/OpenAPI-Parser"
repository = "https://github.com/xitowzys-ISZF/OpenAPI-Parser"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core>=1.0.0", "wheel>=0.36,<1.0", "poetry>=1.1,<2", "virtualenv==20.0.33"]
build-backend = "poetry.core.masonry.api"